# tiny-lang-c

./: CMakeLists.txt  README.md
simple/: runme.bat
